<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/speakerss"
            android:icon="@drawable/speakers"
            android:title="@string/speakers" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/sessions"
            android:title="@string/sessions" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/keynotes"
            android:title="@string/keynote" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/vote"
            android:title="@string/vote" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
