<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="top|left"
    android:padding="5dp"
    android:background="@drawable/state_error_layout_shape"
    >


    <LinearLayout
        android:gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_marginLeft="-20dp"
            android:id="@+id/imageView2"
            android:layout_width="79dp"
            android:layout_height="35dp"
            android:layout_gravity="left"
            android:src="@drawable/voxxed_days_error" />
    </LinearLayout>


    <TextView
        android:layout_gravity="left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="17sp"
        android:fontFamily="serif"
        android:text="@string/athernsErrorTitle"
        android:background="@drawable/textviewshape"
        android:id="@+id/fdg"/>
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="70dp"
        android:text="@string/AthensErrorMessage"
        android:id="@+id/athensErrorMessage"/>


    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/select_year"/>
        <Spinner
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/athens_selected_year_spinner"

            ></Spinner>



    </LinearLayout>

</LinearLayout>